--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -329,6 +329,7 @@
     <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>
     <string name="could_not_load_public_keys">could not load public keys</string>
     <string name="keystore_not_supported">keychain not supported</string>
+    <string name="keystore_not_unlocked">keychain was not unlocked</string>
     <string name="pref_title_global_options">global options</string>
     <string name="store_password_in_keychain">store password in keychain</string>
     <string name="menu_assign_alias">assign alias</string>
